 0.4.2.  This functionality allows you to style a block of cells much
 easier than before.  Thanks to Alexey Stukalov for his significant
 contribution on the Java side and for the original impetus.

 o Bug fix: read.xlsx2 doesn't read an extra emtpy column anymore.

 o Absolute paths are no longer needed for saveWorkbook and friends.
 Reported by Mike Cheetham.

Changes in version 0.4.2 (released 2012-02-08)

 o New function readRows() similar to readColumns() for reading
   accross the columns. 

 o Removed a stray browser() in function .guess_cell_type


Changes in version 0.4.1 (released 2012-01-22)

 o Added a test for file existence in loadWorkbook.  If file does not
   exist, the error message from read.xlsx, read.xlsx2 and
   loadWorkbook is now more informative.  Also added path expansion in
   file names. (Suggested by Dirk Eddelbuettel.)

 o Fixed bug in addDataFrame to allow it to add a df to existing
   sheets, not only to new sheets. 


Changes in version 0.4.0 (released 2012-01-15)

 o BACWARDS INCOMPATIBLE CHANGES!  A complete rewrite of functionality
   to deal with cell styles.  Although I want to minimize API breaking
   changes, I belive that these changes are for the better as the old
   function createCellStyle had a whopping 11 arguments and was still
   incomplete.  The new functionality defines an S3 object CellStyle
   on which you can "add" DataFormat, Font, Fill, Border, Alignment,
   Protection.  On the note of backward compatibility, I don't want to
   promise anything as the package is still young.  As more people
   starts using the package, the API will freeze and if breaking
   changes are contemplated, a clear deprecation path will be
   provided.  

 o A Google project has been created http://code.google.com/p/rexcel/
   to expose the development branch of the package and manage the
   social interaction.  Please report all issues through this venue.
   Also a Google groups http://groups.google.com/group/R-package-xlsx